# skilldeck

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/authentication-review/: SKILL.md
claude-plugin/skills/ci-workflow-review/: SKILL.md
claude-plugin/skills/code-smells/: SKILL.md
claude-plugin/skills/dependency-review/: SKILL.md
claude-plugin/skills/iac-review/: SKILL.md
claude-plugin/skills/logging/: SKILL.md
claude-plugin/skills/migration-review/: SKILL.md
claude-plugin/skills/resilience-review/: SKILL.md
claude-plugin/skills/security-review/: SKILL.md
claude-plugin/skills/test-review/: SKILL.md
docs/: adapters.md  authoring-skills.md  finding-output.md  releasing.md
evals/: README.md  run_evals.py
evals/fixtures/authentication-review/: expected.yaml
evals/fixtures/authentication-review-saml/: expected.yaml
evals/fixtures/authentication-review-saml/base/: requirements.txt
evals/fixtures/ci-workflow-review/: expected.yaml
evals/fixtures/ci-workflow-review-gitlab/: expected.yaml
evals/fixtures/code-smells/: expected.yaml
evals/fixtures/dependency-review/: expected.yaml
evals/fixtures/dependency-review/base/: requirements.txt
evals/fixtures/iac-review/: expected.yaml
evals/fixtures/logging/: expected.yaml
evals/fixtures/migration-review/: expected.yaml
evals/fixtures/resilience-review/: expected.yaml
evals/fixtures/security-review/: expected.yaml
evals/fixtures/test-review/: expected.yaml
scripts/: build_plugin.py  check_release_consistency.py  prepare_release.py
src/skilldeck/: cli.py  registry.py  stamp.py
src/skilldeck/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  kiro.py
src/skillful/: registry.py
tests/: test_adapters.py  test_cli.py  test_eval_fixtures.py  test_plugin_build.py  test_prepare_release.py  test_registry.py  test_release_consistency.py  test_skill_structure.py  test_stamp.py
(+54 files in other folders)
