[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skilldeck"
version = "0.3.0"
description = "Agent-agnostic security & code-review skills for coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Richard Hope" }]
keywords = ["claude", "codex", "kiro", "coding-assistant", "skills", "code-review", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/IcebergAI/skilldeck"
Repository = "https://github.com/IcebergAI/skilldeck"
Issues = "https://github.com/IcebergAI/skilldeck/issues"
Changelog = "https://github.com/IcebergAI/skilldeck/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
skilldeck = "skilldeck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skilldeck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]
# eval fixtures deliberately contain the defects the skills must find
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
]

[tool.mypy]
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
